--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,25 +27,8 @@ font-style: normal;
      border-radius: 5px;
      
      background-repeat: no-repeat;
-    
-
-     
-
-    /* background: linear-gradient(rgba(238, 137, 43, 0.8), rgba(190, 142, 78, 0.8)), url("../images/watch.png"); 
-    background: linear-gradient(rgba(238, 137, 43, 0.8), rgba(190, 142, 78, 0.8)), url("../images/watch.png"); 
-     background-size: contain;
-     background-repeat: no-repeat; */
-     /* background-image: url('../images/gradient2.png'); */
-    /* background-position: center; */ 
-    /* height: 100px;
-        background:  linear-gradient(135deg, lightgreen 0, lightblue 100%),url("../images/watch.png") no-repeat center;
-        background-size: contain; */
 }
 .gradient{
-    /* background-image: url('../images/gradient2.png'); */
-/*     
-    padding-top:100px;
-    padding-bottom: 100px; */
      padding: 120px 106px; 
      border: #F8F8F8;
      border-radius: 5px;
@@ -103,7 +86,8 @@ nav ul{
 .banner{
     display: flex;
     align-items:flex-end;
-    margin: 0 200px;
+    margin: 0 60px;
+    width: 90%;
     text-align: right;
 }
 .banner-title{
@@ -113,6 +97,8 @@ font-size: 50px;
 text-align:right;
 padding-left: 600px;
 padding-top: 200px;
+margin-bottom: 30px;
+
 
 }
 
@@ -121,8 +107,9 @@ padding-top: 200px;
     font-weight: 400;
     font-size: 16px;
     text-align: right;
-    margin: 30px;
+     margin-bottom: 30px;
     padding-left: 477px;
+    
 }
 /* Failor Section */
 .failures{
@@ -203,7 +190,6 @@ text-align: center;
     border: 0;
     width: 100%;
     padding: 10px 20px;
-    /* background-color: #151414; */
     color: #F8F8F8;
 }
 
@@ -258,14 +244,6 @@ footer{
     height: 100px;
     background: #eed95fad;
 }
-
-footer h2{
-font-weight: 400;
-font-size: 36px;
-color: #271414;
-font-weight: bold;
-}
-
 /* Bonus Section */
 .body {
     min-height: 100vh;
